fix overflowing item content in mobile

--- a/src/components/WorkloadItem/WorkloadItem.css
+++ b/src/components/WorkloadItem/WorkloadItem.css
@@ -37,3 +37,9 @@
 .WorkloadItem-statusText.success {
   color: #08bd80;
 }
+
+@media only screen and (max-width: 47.95em) {
+  .WorkloadItem-cancelButton {
+    width: 80px;
+  }
+}
